kubernetes/argo-cd/projects/nebius/production-hm/speaches/environments/production/kubernetes-manifests/speaches-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speaches-deployment
  namespace: production-speaches
  labels:
    app.kubernetes.io/name: speaches
    app.kubernetes.io/part-of: production-speaches
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: speaches
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speaches
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: speaches-service-account
      nodeSelector:
        nvidia.com/mig.config: all-2g.35gb
      tolerations:
        - key: environment
          operator: Equal
          value: production
          effect: NoSchedule
        - key: nvidia.com/mig-2g.35gb
          operator: Exists
          effect: NoSchedule
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - speaches
              topologyKey: kubernetes.io/hostname
      containers:
        - name: speaches
          image: ghcr.io/speaches-ai/speaches:0.9.0-rc.3-cuda
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 400m
              memory: 3Gi
              nvidia.com/mig-2g.35gb: 1
            limits:
              memory: 5Gi
              nvidia.com/mig-2g.35gb: 1
