kubernetes/argo-cd/projects/nebius/production-hm/speaches/environments/production/kubernetes-manifests/speaches-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speaches-ingress
  namespace: production-speaches
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: speaches.hongbomiao.com
  labels:
    app.kubernetes.io/name: speaches
    app.kubernetes.io/part-of: production-speaches
spec:
  rules:
    - host: speaches.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speaches-service
                port:
                  number: 80
  tls:
    - hosts:
        - speaches.hongbomiao.com
      secretName: speaches-certificate
